ImpressCMS ChangeLog

==========================================
Unreleased : ImpressCMS 1.0 "Janus" Beta 2
==========================================

- Fixed : #1870346 System blocks not visible to added group (skenow/dave_l)
- Fixed : #1867922 No nice path from getNicePathFromId (MacDonald/malanciault)
- Fixed : #1876797 the $tpl XoopsTpl object used in htdocs/cp_functions.php and htdocs/admin.php had a too generic name which was creating conflict (with AltSys for example). The variable name was renamed for $icsmAdminTpl (malanciault)
- Fixed : #1875382 error in xoops.css (display: inline-block) (MacDonald/malanciault)


========================================
2008-01-08 : ImpressCMS 1.0 "Janus" Beta
========================================

- Added : linkexternal.js to header, allows devs & designers to utilise 'rel="external" or rel="nofollow" in <A > tags as a replacement for target="_blank". (Vaughan)
- Added : New admin interface based on XOOPS EXM and improved. Thanks to XOOPS EXM!. (BitC3R0 / malanciault / young-pee)
- Added : Addition of the XoopsEditors framework with default editor (malanciault)
- Added : Integration of the Easiest Multilanguage originally created by GIJOE (malanciault)
- Added : Addition of Gijoe Remember me hack (malanciault)
- Added : Added a new Database Driver (MySQLi). (young-pee)
- Added : New feature to add/edit/delete blocks positions. (rplima/young-pee)
- Added : New installer (skalpa/wtravel)
- Added : Configuration of XOOPS_TRUST_PATH in intall wizard (malanciault)
- Added : Saving the database information in a file inside trust_path if possible (malanciault)
- Added : Upgrade script from XOOPS 2.0.18 (Vaughan/malanciault)
- Added : Handling HTTP errors automatically on the site. (malanciault/young-pee)
- Added : Creating a random DB prefix in instalation process like mentioned in feature request item #1848819 (real_therplima)
- Added : New default theme : impresstheme created by aphex and snow (malanciault)